crates/harness-tui/src/snapshots/harness_tui__ui__ui_overlays__status_dialog_render_snapshot_covers_harness_sections.snap
---
source: crates/harness-tui/src/ui_overlays.rs
assertion_line: 514
expression: "format!(\"{:#?}\", terminal.backend().buffer())"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "          Status                                                   esc          ",
        "          Workflow: inactive                                                    ",
        "                                                                                ",
        "          2 MCP Servers                                                         ",
        "          • connected Connected                                                 ",
        "          • disabled Disabled in configuration                                  ",
        "          • failed connection refused                                           ",
        "                                                                                ",
        "          1 LSP Servers                                                         ",
        "          • rust /workspace                                                     ",
        "                                                                                ",
        "          Continuation: inactive                                                ",
        "                                                                                ",
        "          No Formatters                                                         ",
        "                                                                                ",
        "          No Plugins                                                            ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 72, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 4, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 10, y: 4, fg: Rgb(238, 238, 238), bg: Rgb(20, 20, 20), underline: Reset, modifier: BOLD,
        x: 16, y: 4, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 67, y: 4, fg: Rgb(128, 128, 128), bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 70, y: 4, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 72, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 5, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 10, y: 5, fg: Rgb(238, 238, 238), bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 28, y: 5, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 72, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 6, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 72, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 7, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 10, y: 7, fg: Rgb(238, 238, 238), bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 23, y: 7, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 72, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 8, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 10, y: 8, fg: Rgb(127, 216, 143), bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 12, y: 8, fg: Rgb(238, 238, 238), bg: Rgb(20, 20, 20), underline: Reset, modifier: BOLD,
        x: 21, y: 8, fg: Rgb(128, 128, 128), bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 31, y: 8, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 72, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 9, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 10, y: 9, fg: Rgb(128, 128, 128), bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 12, y: 9, fg: Rgb(238, 238, 238), bg: Rgb(20, 20, 20), underline: Reset, modifier: BOLD,
        x: 20, y: 9, fg: Rgb(128, 128, 128), bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 46, y: 9, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 72, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 10, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 10, y: 10, fg: Rgb(224, 108, 117), bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 12, y: 10, fg: Rgb(238, 238, 238), bg: Rgb(20, 20, 20), underline: Reset, modifier: BOLD,
        x: 18, y: 10, fg: Rgb(128, 128, 128), bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 37, y: 10, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 72, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 11, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 72, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 12, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 10, y: 12, fg: Rgb(238, 238, 238), bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 23, y: 12, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 72, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 13, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 10, y: 13, fg: Rgb(127, 216, 143), bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 12, y: 13, fg: Rgb(238, 238, 238), bg: Rgb(20, 20, 20), underline: Reset, modifier: BOLD,
        x: 16, y: 13, fg: Rgb(128, 128, 128), bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 27, y: 13, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 72, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 14, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 72, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 15, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 10, y: 15, fg: Rgb(238, 238, 238), bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 32, y: 15, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 72, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 16, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 72, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 17, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 10, y: 17, fg: Rgb(238, 238, 238), bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 23, y: 17, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 72, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 18, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 72, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 19, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 10, y: 19, fg: Rgb(238, 238, 238), bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 20, y: 19, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 72, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 20, fg: Reset, bg: Rgb(20, 20, 20), underline: Reset, modifier: NONE,
        x: 72, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
